[gd_scene load_steps=7 format=3 uid="uid://cdxanxha8yc48"]

[ext_resource type="Script" uid="uid://c86i4sgfg7tpf" path="res://Scripts/player.gd" id="1_v0iea"]
[ext_resource type="Texture2D" uid="uid://cvcoyy63ccdn6" path="res://Scripts/ball.png" id="2_cvnsp"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_fj7yv"]
friction = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj7yv"]
size = Vector2(38, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_tlwt5"]
radius = 19.0263

[sub_resource type="CircleShape2D" id="CircleShape2D_v0iea"]
radius = 38.4708

[node name="Player" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_fj7yv")
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_v0iea")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-2, 16)
polygon = PackedVector2Array(-21, 0, 28, 0, 15, -34, 3, -42, -13, -32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_fj7yv")

[node name="GravityDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityDetectionArea"]
shape = SubResource("CircleShape2D_tlwt5")
debug_color = Color(0.478431, 0.588235, 0, 0.305882)

[node name="LargeDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LargeDetectionArea"]
shape = SubResource("CircleShape2D_v0iea")
debug_color = Color(0.840643, 0.364583, 0.318232, 0.42)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 17)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)

[node name="OnePackage" type="Node2D" parent="."]
visible = false
position = Vector2(0, -3)

[node name="Ball" type="Sprite2D" parent="OnePackage"]
position = Vector2(1, -34)
scale = Vector2(0.04375, 0.04375)
texture = ExtResource("2_cvnsp")

[node name="TwoPackages" type="Node2D" parent="."]
visible = false
position = Vector2(0, -3)

[node name="Ball2" type="Sprite2D" parent="TwoPackages"]
position = Vector2(10, -34)
scale = Vector2(0.04375, 0.04375)
texture = ExtResource("2_cvnsp")

[node name="Ball3" type="Sprite2D" parent="TwoPackages"]
position = Vector2(-8, -34)
scale = Vector2(0.04375, 0.04375)
texture = ExtResource("2_cvnsp")

[node name="ThreePackages" type="Node2D" parent="."]
visible = false
position = Vector2(0, -3)

[node name="Ball2" type="Sprite2D" parent="ThreePackages"]
position = Vector2(19, -34)
scale = Vector2(0.04375, 0.04375)
texture = ExtResource("2_cvnsp")

[node name="Ball3" type="Sprite2D" parent="ThreePackages"]
position = Vector2(1, -34)
scale = Vector2(0.04375, 0.04375)
texture = ExtResource("2_cvnsp")

[node name="Ball4" type="Sprite2D" parent="ThreePackages"]
position = Vector2(-17, -34)
scale = Vector2(0.04375, 0.04375)
texture = ExtResource("2_cvnsp")
